--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
+table, th, td {
+  
+  border-top: 2px solid rgb(182, 182, 182);
+  border-collapse:collapse;
+  width:150px;
+  padding:10px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+table {
+  width: 80%;
   text-align: center;
+  
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.tablecss{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
+  
 }
 
-.App-link {
-  color: #61dafb;
+.title{
+  background-color: rgb(219, 223, 232);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.redProduct{
+  color: red;
+}
+
+.search{
+
+  padding: 10px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  
+
+}
+
+
+
+.searchterm{
+
+  border: 2px solid #ecebeb;
+  padding: 6px;
+  height: 20px;
+  border-radius: 5px;
+  outline: none;
+  color: #000000;
+  width: 80%;
+  margin-left: 50px;
+  margin-right: 50px;
+
+  
 }
